ssh-import-id (3.3) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Feb 2013 11:53:47 -0600

ssh-import-id (3.2-0ubuntu1) raring; urgency=low

  * debian/control:
    - need setuptools for compilation

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Feb 2013 11:53:45 -0600

ssh-import-id (3.1-0ubuntu1) raring; urgency=low

  * debian/control:
    - ensure we have python packaging build dependencies
  * debian/control, debian/rules:
    - clean up python build dependencies, fix problem where
      dh_pysupport pulls in python-support as a dependency

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Feb 2013 10:05:21 -0600

ssh-import-id (3.0-0ubuntu1) raring; urgency=low

  [ Dustin Kirkland ]
  * setup.py:
    - bump major version to 3.x since this is a complete rewrite in Python
    - add support for gh:username (github) as well as lp:username (launchpad)
  * bin/ssh-auth-id => bin/ssh-import-id, bin/ssh-auth-id-gh => bin/ssh-
    import-id-gh, bin/ssh-auth-id-lp => bin/ssh-import-id-lp, README.md,
    setup.py:
    - rename Casey's ssh-auth-id command to ssh-import-id with this merge
  * bin/ssh-import-id, bin/ssh-import-id-gh, bin/ssh-import-id-lp,
    setup.py:
    - get these pep8 clean with
       pep8 --verbose --repeat --ignore W191,E501
  * bin/ssh-import-id, bin/ssh-import-id-gh, bin/ssh-import-id-lp:
    - drop the "starts with ssh-" check
    - bad assumption, since my ecdsa key starts with "ecdsa-sha2-nistp256"
    - if it's a bad key, then ssh-keygen -l -f will shake that out
    - support wget as a fallback, when python requests module is not available
    - loop over each id in argv
    - import subprocess
  * === added directory attic, debian/control, ssh-import-id =>
    attic/ssh-import-id, ssh-import-id.py => attic/ssh-import-id.py:
    - relocate the old shell utility and the monolithic python utility to
      the attic for now; these should be removed entirely from the source